# BCIT-Hackathon

./: LICENSE  README.md  docstring_generator.py  identify_assignment.py  identify_functions.py  identify_logical_operators.py  identify_operation.py  iterables.py  parse_function_declaration.py  pyproject.toml  try_except.py
src/: __init__.py
src/parse4u/: __init__.py  docstring_generator.py  identify_assignment.py  identify_functions.py  identify_logical_operators.py  identify_operation.py  iterables.py  parse_function_declaration.py  try_except.py
